--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -2,10 +2,11 @@ name: Matrix Demo
 on: push
 jobs:
   build:
+    continue-on-error: true
     strategy:
         matrix:
-            node-version: [16, 18, 20]
-            operating-system: [ubuntu-latest, window-latest]
+            node-version: [12, 14, 16]
+            operating-system: [ubuntu-latest, windows-latest]
     runs-on: ${{ matrix.operating-system }}
     steps: 
     - name: Get Code
