--- a/.github/workflows/build-upload-react.yml
+++ b/.github/workflows/build-upload-react.yml
@@ -36,9 +36,10 @@ jobs:
       DEPLOYMENT_FILE: k8s-${{github.event.inputs.environment}}-deployment.yaml    
     runs-on: ubuntu-latest
     steps:
-      - name: Printing github object
+      - name: Printing github.event object
         run: |
-          echo "${{ toJson(github) }}"      
+          echo "${{ toJson(github.event) }}"  
+          echo "${{ toJson(github.event.inputs) }}"     
       - name: Printing inputs
         run: |
           echo "Build Number: ${{github.event.inputs.build_number}}"
