--- a/.github/workflows/build-upload-react.yml
+++ b/.github/workflows/build-upload-react.yml
@@ -26,26 +26,23 @@ on:
   #       type: string
 jobs:
   build-upload-react:
-    environment: ${{github.event.inputs.environment}}
+    environment: ${{inputs.environment}}
     env:
       ARTIFACTORY_URL: 'https://${{ vars.REGISTRY_URL }}'
       REGISTRY_URL: ${{ vars.REGISTRY_URL }}
       ARTIFACT_FOLDER: ${{ vars.ARTIFACT_FOLDER }}${{ vars.FOLDER_SUFFIX }}
       IMAGE_FOLDER: ${{ vars.IMAGE_FOLDER }}${{ vars.FOLDER_SUFFIX }}
-      NAMESPACE: ${{ vars.ASMS }}-${{github.event.inputs.environment}}
-      DEPLOYMENT_FILE: k8s-${{github.event.inputs.environment}}-deployment.yaml    
+      NAMESPACE: ${{ vars.ASMS }}-${{inputs.environment}}
+      DEPLOYMENT_FILE: k8s-${{inputs.environment}}-deployment.yaml    
     runs-on: ubuntu-latest
     steps:
-      - name: Printing github.event object
-        run: |
-          echo "${{ toJson(github.event) }}" 
-      - name: Printing github.event.inputs object
+      - name: Printing inputs object
         run: | 
-          echo "${{ toJson(github.event.inputs) }}"              
+          echo "${{ toJson(inputs) }}"              
       - name: Printing inputs
         run: |
-          echo "Build Number: ${{github.event.inputs.build_number}}"
-          echo "Environment: ${{github.event.inputs.environment}}"
+          echo "Build Number: ${{inputs.build_number}}"
+          echo "Environment: ${{inputs.environment}}"
       - name: Printing env variables
         run: |
           echo "ARTIFACTORY_URL: ${{env.ARTIFACTORY_URL}}"
