--- a/.github/workflows/auto-deployment.yml
+++ b/.github/workflows/auto-deployment.yml
@@ -17,16 +17,6 @@ jobs:
       build_number: ${{ steps.calculate-build-number.outputs.build_number }}
       environment: ${{ steps.set-environment.outputs.environment }}
     steps:
-      - name: Calculate Environment and Build Number
-        id: calculate-build-number
-        run: |
-          code_version=${{ vars.CODE_VERSION }}
-          run_number=${{ github.event.inputs.run_number != '' && github.event.inputs.run_number || github.run_number }}
-          build_number=$(echo $code_version | sed "s/x/$run_number/")          
-          echo "build_number=$build_number" >> $GITHUB_OUTPUT
-      - name: Print build number
-        run: |
-          echo "Build Number: ${{ steps.calculate-build-number.outputs.build_number }}"
       - name: Set Environment
         id: set-environment
         run: |
@@ -38,7 +28,20 @@ jobs:
           echo "environment=$environment" >> $GITHUB_OUTPUT
       - name: Print environment
         run: |
-          echo "Environment: ${{ steps.set-environment.outputs.environment }}"          
+          echo "Environment: ${{ steps.set-environment.outputs.environment }}"
+      - name: Calculate Build Number
+        id: calculate-build-number
+        run: |
+          code_version=${{ vars.CODE_VERSION }}
+          run_number=${{ github.event.inputs.run_number != '' && github.event.inputs.run_number || github.run_number }}
+          build_number=$(echo $code_version | sed "s/x/$run_number/")
+          if [[ ${{ steps.set-environment.outputs.environment }} == 'test' ]]; then
+            build_number="t$build_number"
+          fi
+          echo "build_number=$build_number" >> $GITHUB_OUTPUT
+      - name: Print build number
+        run: |
+          echo "Build Number: ${{ steps.calculate-build-number.outputs.build_number }}"
   build-upload-app:
     needs: calculate-environment-build-number
     uses: ./.github/workflows/build-upload-react.yml
