--- a/.github/workflows/auto-deployment.yml
+++ b/.github/workflows/auto-deployment.yml
@@ -46,13 +46,19 @@ jobs:
     needs: calculate-environment-build-number
     uses: ./.github/workflows/build-upload-react.yml
     with:
+      repository: "this"
+      branch: "this"
       build_number: ${{ needs.calculate-environment-build-number.outputs.build_number }}
       environment: ${{ needs.calculate-environment-build-number.outputs.environment }}
+      folder_suffix: ${{ vars.FOLDER_SUFFIX }}
   deploy-app:
     needs:
       - calculate-environment-build-number
       - build-upload-app
     uses: ./.github/workflows/deploy-app.yml
     with:
+      repository: "this"
+      branch: "this"
       build_number: ${{ needs.calculate-environment-build-number.outputs.build_number }}
       environment: ${{ needs.calculate-environment-build-number.outputs.environment }}
+      folder_suffix: ${{ vars.FOLDER_SUFFIX }}
