--- a/.github/workflows/build-upload-react.yml
+++ b/.github/workflows/build-upload-react.yml
@@ -2,6 +2,16 @@ name: Build and Upload React
 on: 
   workflow_call:
     inputs:
+      repository:
+        description: GitHub repository
+        required: true
+        default: ''
+        type: string
+      branch:
+        description: Branch to build
+        required: true
+        default: ''
+        type: string      
       build_number:
         description: Build Number
         required: true
@@ -11,9 +21,24 @@ on:
         description: Environment to build
         required: true
         default: dev
+        type: string
+      folder_suffix:
+        description: Folder to store artifact and image
+        required: true
+        default: ''
         type: string
   workflow_dispatch:
     inputs:
+      repository:
+        description: GitHub repository
+        required: true
+        default: ''
+        type: string
+      branch:
+        description: Branch to build
+        required: true
+        default: ''
+        type: string
       build_number:
         description: Build Number
         required: true
@@ -23,16 +48,23 @@ on:
         description: Environment to build
         required: true
         default: dev
+        type: string
+      folder_suffix:
+        description: Folder to store artifact and image
+        required: true
+        default: ''
         type: string
 jobs:
   build-upload-react:
     environment: ${{ github.event_name != 'workflow_dispatch' && inputs.environment || github.event.inputs.environment }}
     env:
+      REPOSITORY: ${{ github.event_name != 'workflow_dispatch' && inputs.build_number || github.event.inputs.build_number }}
+      BRANCH: ${{ github.event_name != 'workflow_dispatch' && inputs.build_number || github.event.inputs.build_number }}
       BUILD_NUMBER: ${{ github.event_name != 'workflow_dispatch' && inputs.build_number || github.event.inputs.build_number }}
       ARTIFACTORY_URL: 'https://${{ vars.REGISTRY_URL }}'
       REGISTRY_URL: ${{ vars.REGISTRY_URL }}
-      ARTIFACT_FOLDER: ${{ vars.ARTIFACT_FOLDER }}${{ vars.FOLDER_SUFFIX }}
-      IMAGE_FOLDER: ${{ vars.IMAGE_FOLDER }}${{ vars.FOLDER_SUFFIX }}
+      ARTIFACT_FOLDER: ${{ vars.ARTIFACT_FOLDER }}${{ github.event_name != 'workflow_dispatch' && inputs.folder_suffix || github.event.inputs.folder_suffix }}
+      IMAGE_FOLDER: ${{ vars.IMAGE_FOLDER }}${{ github.event_name != 'workflow_dispatch' && inputs.folder_suffix || github.event.inputs.folder_suffix }}
       ENVIRONMENT: ${{ github.event_name != 'workflow_dispatch' && inputs.environment || github.event.inputs.environment }}
       NAMESPACE: ${{ vars.ASMS }}-${{ github.event_name != 'workflow_dispatch' && inputs.environment || github.event.inputs.environment }}
       DEPLOYMENT_FILE: k8s-${{ github.event_name != 'workflow_dispatch' && inputs.environment || github.event.inputs.environment }}-deployment.yaml
