--- a/.github/workflows/auto-deployment.yml
+++ b/.github/workflows/auto-deployment.yml
@@ -47,7 +47,7 @@ jobs:
           echo "Build Number: ${{ steps.calculate-build-number.outputs.build_number }}"
   build-upload-app:
     needs: calculate-environment-build-number
-    uses: PepeMtzCampos/gha-env/.github/workflows/build-upload-react.yml #./.github/workflows/build-upload-react.yml
+    uses: PepeMtzCampos/gha-env/.github/workflows/build-upload-react.yml
     with:
       repository: ${{ github.repository }}
       branch: ${{ github.ref }}
@@ -58,7 +58,7 @@ jobs:
     needs:
       - calculate-environment-build-number
       - build-upload-app
-    uses: PepeMtzCampos/gha-env/.github/workflows/deploy-app.yml # ./.github/workflows/deploy-app.yml
+    uses: PepeMtzCampos/gha-env/.github/workflows/deploy-app.yml
     with:
       repository: ${{ github.repository }}
       branch: ${{ github.ref }}
